# -*- coding: utf-8 -*-
2008-07-01  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/installer.rb:  Add #gem_home, #bin_dir for hooks.
	* lib/rubygems/uninstaller.rb:  Add #gem_home, #bin_dir for hooks.

2008-06-30  Eric Hodel  <drbrain@segment7.net>

	* test/test_ext_configure_builder.rb:  Locale-free patch by Yusuke
	Endoh [ruby-core:17444].
	* lib/rubygems.rb:  Add pre/post (un)install hooks.
	* lib/rubygems/installer.rb:  Call pre/post install hooks as
	appropriate.
	* lib/rubygems/uninstaller.rb:  Call pre/post uninstall hooks as
	appropriate.  Minor refactoring of #uninstall.
	* lib/rubygems/package/tar_reader.rb:  Some OSs raise EINVAL on seek.
	Based on patch in bug #20791 by Neil Wilson.
	* lib/rubygems/specification.rb:  Correctly check for support of
	development dependencies for #to_ruby.  Bug #20778 by Evan Weaver.
	* lib/rubygems/spec_fetcher.rb:  Correctly load all cache file even if
	latest has been loaded.  Bug #20776 by Uwe Kubosch.

2008-06-25  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/config_file.rb:  Add Gem::ConfigFile constants for
	packagers and implementors to override defaults.
	* test/*:  Fixes to run tests when under test/rubygems/.  Patch by
	Yusuke ENDOH [ruby-core:17353].

2008-06-24  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/remote_fetcher.rb:  Cleanup to support
	if-modified-since requests.  pair: Ryan Davis
	* lib/rubygems/indexer:  Force platform to Gem::Platform::RUBY when
	nil or blank.  Fixes various uninstallable gems.

2008-06-24  Phil Hagelberg <technomancy@gmail.com>

	* lib/rubygems/installer.rb: Fall back on ~/.gem if GEM_HOME is
	not writable.
	* lib/rubygems/install_update_options.rb: Allow --user-install or
	--no-user-install command-line switch to explicitly force whether
	or not ~/.gem should be used.
	* lib/rubygems/remote_fetcher.rb: Use ~/.gem/cache if cache dir is
	not writable.
	* test/gemutilities.rb: Use MockGemUi for all tests.

2008-06-21  Eric Hodel  <drbrain@segment7.net>
